updated journal archive and button wall

--- a/doqmeat/journal/entry.css
+++ b/doqmeat/journal/entry.css
@@ -37,8 +37,8 @@ img {
 }
 
 hr {
-	background: url("!g/leaf.gif");
-	height: 15px;
+	background: url("/!g/div/clover.png");
+	height: 20px;
 	border: 0px;
 }
 
