--- a/doqmeat/about/index.css
+++ b/doqmeat/about/index.css
@@ -1,478 +1,479 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :root {
-  --darkblue: #15197b;
-  --lightblue: #87ade3;
-  --hotpink: #fe88fa;
-  --lightpink: #fdbefa;
-  --grey: #f3f3f1;
-  --whiteish: #fafafa;
+	--darkblue: #15197b;
+	--lightblue: #87ade3;
+	--hotpink: #fe88fa;
+	--lightpink: #fdbefa;
+	--grey: #f3f3f1;
+	--whiteish: #fafafa;
 }
 
 body {
-  background: url(iyueni.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  word-wrap: break-word;
-  text-align: left;
-  font-size: 20px;
-  word-spacing: 8px;
-  line-height: 23px;
-  margin: 0px;
-  font-family: nintendo-ds-bios;
-  color: black;
-  scrollbar-color: #15197b #fe88fa;
+	background: url(iyueni.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	word-wrap: break-word;
+	text-align: left;
+	font-size: 20px;
+	word-spacing: 8px;
+	line-height: 23px;
+	margin: 0px;
+	font-family: nintendo-ds-bios;
+	color: black;
+	scrollbar-color: #15197b #fe88fa;
 }
 
 li {
-  padding-left: 2px;
-  list-style-position: inside;
+	padding-left: 2px;
+	list-style-position: inside;
 }
 
 a {
-  color: var(--hotpink);
-  font-weight: bold;
-  text-decoration: underline;
+	color: var(--hotpink);
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 a:hover {
-  color: var(--darkblue);
-  text-decoration: none;
-  cursor: help;
+	color: var(--darkblue);
+	text-decoration: none;
+	cursor: help;
 }
 
 a:focus {
-  outline: 1px dashed black;
-  outline-offset: 3px;
+	outline: 1px dashed black;
+	outline-offset: 3px;
 }
 
 mark {
-  background: var(--lightpink);
+	background: var(--lightpink);
 }
 
 p {
-  margin: 0 0 20px 0;
+	margin: 0 0 20px 0;
 }
 
 p img {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 /* header and box */
 .header {
-  text-align: left;
-  color: white;
-  font-family: nintendo-ds-bios;
-  letter-spacing: 1px;
-  font-size: 16px;
-  line-height: 17px;
-  padding-left: 5px;
-  background: #15197b;
-  height: 18px;
-  border: 1px inset black;
+	text-align: left;
+	color: white;
+	font-family: nintendo-ds-bios;
+	letter-spacing: 1px;
+	font-size: 16px;
+	line-height: 17px;
+	padding-left: 5px;
+	background: #15197b;
+	height: 18px;
+	border: 1px inset black;
 }
 
 .himg {
-  float: right;
-  border-radius: 1px;
-  width: 11px;
-  margin: 2px;
+	float: right;
+	border-radius: 1px;
+	width: 11px;
+	margin: 2px;
 }
 
 .header:hover {
-  cursor: move;
+	cursor: move;
 }
 
 .draggable {
-  position: absolute;
+	position: absolute;
 }
 
 .borderwrap {
-  border: 5px solid #f3f3f1;
+	border: 5px solid #f3f3f1;
 }
 
 .wrapper-in {
-  background: #f3f3f1;
-  border: 4px inset #fcfcfc;
+	background: #f3f3f1;
+	border: 4px inset #fcfcfc;
 }
 
 .wrapper-in img {
-  vertical-align: top;
+	vertical-align: top;
 }
 
 .padding {
-  padding: 5px;
+	padding: 5px;
 }
 
 .closebtn:hover {
-  cursor: help;
+	cursor: help;
 }
 
 hr {
-  border-color: #15197b;
-  border-style: dashed;
+	border-color: #15197b;
+	border-style: dashed;
 }
 /* contents */
 
 #pop-up {
-  bottom: 260px;
-  left: 40px;
-  width: 210px;
+	bottom: 260px;
+	left: 40px;
+	width: 210px;
 }
 
 #pop-up .wrapper-in {
-  background: #fd5df8;
-  color: white;
-  border: none;
+	background: #fd5df8;
+	color: white;
+	border: none;
 }
 
 #pop-up a {
-  color: black;
+	color: black;
 }
 
 #about {
-  z-index: 2;
-  top: 120px;
-  right: 290px;
-  width: 500px;
+	z-index: 2;
+	top: 120px;
+	right: 290px;
+	width: 500px;
 }
 
 #about h3 {
-  text-shadow: 1px 1px 4px #f459ef;
+	text-shadow: 1px 1px 4px #f459ef;
 }
 
 #about .wrapper-in {
-  box-sizing: border-box;
-  padding: 10px;
-  overflow: auto;
-  height: 300px;
+	box-sizing: border-box;
+	padding: 10px;
+	overflow: auto;
+	height: 300px;
 }
 
 #quiz {
-  top: 460px;
-  left: 300px;
-  width: 350px;
+	top: 460px;
+	left: 300px;
+	width: 350px;
 }
 
 #quiz .wrapper-in {
-  box-sizing: border-box;
-  padding: 10px;
-  overflow: auto;
-  height: 300px;
+	box-sizing: border-box;
+	padding: 10px;
+	overflow: auto;
+	height: 300px;
 }
 
 #mv {
-  bottom: 200px;
-  left: 20px;
-  width: 250px;
-  height: 10px;
+	bottom: 200px;
+	left: 20px;
+	width: 250px;
+	height: 10px;
 }
 
 #mv .wrapper-in {
-  overflow: hidden;
-  height: 150px;
+	overflow: hidden;
+	height: 150px;
 }
 
 #secret {
-  z-index: 1;
-  top: 90px;
-  right: 400px;
-  width: 300px;
-  height: 10px;
+	z-index: 1;
+	top: 90px;
+	right: 400px;
+	width: 300px;
+	height: 10px;
 }
 
 #secret .wrapper-in {
-  height: auto;
+	height: auto;
 }
 
 #likes {
-  z-index: 2;
-  bottom: 10px;
-  right: 50px;
-  width: 220px;
+	z-index: 2;
+	bottom: 10px;
+	right: 50px;
+	width: 220px;
 }
 
 #likes .wrapper-in {
-  height: 350px;
-  overflow: auto;
+	height: 350px;
+	overflow: auto;
 }
 
 #likes li {
-  list-style-image: url(/!g/pix/heartfabi.gif);
+	list-style-image: url(/!g/pix/heartfabi.gif);
 }
 
 #likes h3 {
-  font-weight: bold;
-  font-size: 19px;
-  color: #fd5df8;
-  letter-spacing: 2px;
-  text-align: right;
-  margin-top: 10px;
-  margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 19px;
+	color: #fd5df8;
+	letter-spacing: 2px;
+	text-align: right;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .dislikes {
-  z-index: 1;
-  bottom: 290px;
-  right: 30px;
-  width: 160px;
+	z-index: 1;
+	bottom: 290px;
+	right: 30px;
+	width: 160px;
 }
 
 .dislikes .wrapper-in {
-  height: 100px;
-  overflow: auto;
+	height: 100px;
+	overflow: auto;
 }
 
 .dislikes li {
-  list-style-image: url(/!g/pix/block.gif);
+	list-style-image: url(/!g/pix/block.gif);
 }
 
 .list {
-  font-size: 18px;
-  line-height: 18px;
+	font-size: 18px;
+	line-height: 18px;
 }
 
 #me {
-  top: 20px;
-  right: 100px;
-  width: 230px;
+	top: 20px;
+	right: 100px;
+	width: 230px;
 }
 
 #me .wrapper-in {
-  height: 150px;
-  word-spacing: -3px;
-  overflow-y: hidden;
-  overflow-x: auto;
-  white-space: nowrap;
+	height: 150px;
+	word-spacing: -3px;
+	overflow-y: hidden;
+	overflow-x: auto;
+	white-space: nowrap;
 }
 
 #me .wrapper-in img {
-  display: inline-block;
-  height: 148px;
+	display: inline-block;
+	height: 148px;
 }
 
 #charas {
-  top: 500px;
-  right: 360px;
-  width: 350px;
+	top: 500px;
+	right: 360px;
+	width: 350px;
 }
 
 #charas .wrapper-in {
-  height: 100px;
-  overflow-y: hidden;
-  overflow-x: auto;
-  white-space: nowrap;
-  word-spacing: -3px;
+	height: 100px;
+	overflow-y: hidden;
+	overflow-x: auto;
+	white-space: nowrap;
+	word-spacing: -3px;
 }
 
 #charas .wrapper-in img {
-  display: inline-block;
-  height: 100px;
+	display: inline-block;
+	height: 100px;
 }
 
 #nostalgia {
-  top: 190px;
-  right: 830px;
-  width: 300px;
+	top: 190px;
+	right: 830px;
+	width: 300px;
 }
 
 #nostalgia .wrapper-in {
-  height: 200px;
-  overflow-y: auto;
-  overflow-x: hide;
-  text-align: center;
-  /* white-space:nowrap; */
+	height: 200px;
+	overflow-y: auto;
+	overflow-x: hide;
+	text-align: center;
+	/* white-space:nowrap; */
 }
 
 #nostalgia .wrapper-in img {
-  display: inline-block;
-  vertical-align: middle;
-  max-width: 100%;
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 100%;
 }
 
 #toys {
-  bottom: 40px;
-  right: 760px;
-  width: 220px;
+	bottom: 40px;
+	right: 760px;
+	width: 220px;
 }
 
 #toys .wrapper-in {
-  text-align: center;
-  height: 240px;
-  overflow: auto;
-  white-space: normal;
+	text-align: center;
+	height: 240px;
+	overflow: auto;
+	white-space: normal;
 }
 
 #toys .wrapper-in img {
-  vertical-align: baseline;
-  display: inline-block;
+	vertical-align: baseline;
+	display: inline-block;
 }
 
 #contact {
-  top: 20px;
-  right: 810px;
-  width: 170px;
+	top: 20px;
+	right: 810px;
+	width: 170px;
 }
 
 #contact .wrapper-in {
-  height: 100px;
-  overflow: auto;
-  white-space: normal;
+	height: 100px;
+	overflow: auto;
+	white-space: normal;
 }
 
 #contact li {
-  list-style-image: url("/!g/pix/1leaf.png");
-  padding-left: 2px;
-  list-style-position: inside;
+	list-style-image: url("/!g/pix/1leaf.png");
+	padding-left: 2px;
+	list-style-position: inside;
 }
 
 #close {
-  position: fixed;
-  top: 5px;
-  left: 5px;
+	position: fixed;
+	top: 5px;
+	left: 5px;
 }
 
 body::before {
-  content: " ";
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: linear-gradient(rgba(12, 5, 15, 0) 10%, #00000025 90%);
-  background-size: 100% 2px;
-  pointer-events: none;
-  z-index: 1;
+	content: " ";
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background: linear-gradient(rgba(12, 5, 15, 0) 10%, #00000025 90%);
+	background-size: 100% 2px;
+	pointer-events: none;
+	z-index: 1;
 }
 
 #s-m-t-tooltip {
-  max-width: 200px;
-  text-align: center;
-  z-index: 9999;
-  margin: 30px 15px 7px 12px;
-  padding: 5px;
-  border-radius: 10px;
-  border: 1px dashed black;
-  color: white;
-  background: #fd5df8;
+	max-width: 200px;
+	text-align: center;
+	z-index: 9999;
+	margin: 30px 15px 7px 12px;
+	padding: 5px;
+	border-radius: 10px;
+	border: 1px dashed black;
+	color: white;
+	background: #fd5df8;
 }
 
 ::selection {
-  color: black;
-  background-color: #c8ceff;
+	color: black;
+	background-color: #c8ceff;
 }
 
 /* scrollbar */
 ::-webkit-scrollbar {
-  width: 14px;
-  height: 14px;
+	width: 14px;
+	height: 14px;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-  background-color: #f3f3f1;
-  border-right: 1px outset #f3f3f1;
-  border-bottom: 1px outset #f3f3f1;
-  border-left: 1px solid white;
-  border-top: 1px solid white;
+	background-color: #f3f3f1;
+	border-right: 1px outset #f3f3f1;
+	border-bottom: 1px outset #f3f3f1;
+	border-left: 1px solid white;
+	border-top: 1px solid white;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-  background-color: #f3f3f1;
-  border-right: 1px outset #f3f3f1;
-  border-bottom: 1px outset #f3f3f1;
-  border-left: 1px solid white;
-  border-top: 1px solid white;
+	background-color: #f3f3f1;
+	border-right: 1px outset #f3f3f1;
+	border-bottom: 1px outset #f3f3f1;
+	border-left: 1px solid white;
+	border-top: 1px solid white;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f3f3f1;
+	background-color: #f3f3f1;
 }
 
 ::-webkit-scrollbar-button:vertical:increment {
-  background-image: url(!g/down.jpg);
+	background-image: url(!g/down.jpg);
 }
 
 ::-webkit-scrollbar-button:vertical:decrement {
-  background-image: url(!g/up.jpg);
+	background-image: url(!g/up.jpg);
 }
 
 ::-webkit-scrollbar-button:horizontal:increment {
-  background-image: url(!g/right.jpg);
+	background-image: url(!g/right.jpg);
 }
 
 ::-webkit-scrollbar-button:horizontal:decrement {
-  background-image: url(!g/left.jpg);
+	background-image: url(!g/left.jpg);
 }
 
 @media only screen and (max-width: 1134px) {
-  .draggable,
-  #about,
-  #nostalgia,
-  #contact,
-  #mv,
-  #likes,
-  #toys,
-  #pop-up,
-  #quiz,
-  #me {
-    margin: auto;
-    width: 90%;
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: auto;
-    margin-bottom: 30px;
-  }
+	.draggable,
+	#about,
+	#nostalgia,
+	#contact,
+	#mv,
+	#likes,
+	#toys,
+	#pop-up,
+	#quiz,
+	#charas,
+	#me {
+		margin: auto;
+		width: 90%;
+		position: relative;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: auto;
+		margin-bottom: 30px;
+	}
 
-  #nostalgia .wrapper-in,
-  #about .wrapper-in,
-  .dislikes .wrapper-in,
-  #contact .wrapper-in,
-  #likes .wrapper-in {
-    height: 100%;
-  }
+	#nostalgia .wrapper-in,
+	#about .wrapper-in,
+	.dislikes .wrapper-in,
+	#contact .wrapper-in,
+	#likes .wrapper-in {
+		height: 100%;
+	}
 
-  #mv {
-    width: 70%;
-  }
+	#mv {
+		width: 70%;
+	}
 
-  #toys {
-    width: 50%;
-  }
+	#toys {
+		width: 50%;
+	}
 
-  #pop-up {
-    width: 50%;
-    margin-top: 30px;
-  }
+	#pop-up {
+		width: 50%;
+		margin-top: 30px;
+	}
 
-  #contact li,
-  #likes li {
-    display: inline-block;
-  }
+	#contact li,
+	#likes li {
+		display: inline-block;
+	}
 
-  #likes li::before {
-    content: url(/!g/pix/heartfabi.gif);
-    padding-right: 4px;
-  }
+	#likes li::before {
+		content: url(/!g/pix/heartfabi.gif);
+		padding-right: 4px;
+	}
 
-  #likes h3 {
-    text-align: center;
-  }
+	#likes h3 {
+		text-align: center;
+	}
 
-  #contact li::before {
-    content: url("/!g/pix/1leaf.png");
-    padding-right: 4px;
-  }
+	#contact li::before {
+		content: url("/!g/pix/1leaf.png");
+		padding-right: 4px;
+	}
 
-  #secret,
-  #nostalgia,
-  .mobile {
-    display: none;
-  }
+	#secret,
+	#nostalgia,
+	.mobile {
+		display: none;
+	}
 }
