updated some journal files + homepage

--- a/doqmeat/journal/entry.css
+++ b/doqmeat/journal/entry.css
@@ -21,10 +21,21 @@ header {
 	padding: 5px;
 }
 
-li {
+ol {
+	::marker {
+		color: var(--red);
+		font-weight: bold;
+	}
+}
+
+ol li {
+	list-style-type: decimal-leading-zero;
+	margin: 15px 0px;
+}
+
+ul li {
 	list-style-image: url("/!g/pix/starpink.gif");
 	padding-left: 2px;
-	list-style-position: inside;
 }
 
 p,
