added a script to homepage that changes the background color depending on the month

--- a/doqmeat/!f/v5/body.css
+++ b/doqmeat/!f/v5/body.css
@@ -18,7 +18,7 @@ html {
 
 body {
 	background: url("/!g/bg/bggrid-transp.png");
-	background-color: #f8f3fd;
+	background-color: white;
 	margin: 0;
 	margin-top: 50px;
 	color: #916b40;
