--- a/doqmeat/music/cds/body.css
+++ b/doqmeat/music/cds/body.css
@@ -170,7 +170,7 @@ h3 {
 }
 
 .date::before {
-	content: "purchased on:";
+	content: "added on:";
 }
 
 .fav::after {
@@ -179,7 +179,7 @@ h3 {
 }
 
 .placeholder::after {
-	content: "(img is a placeholder!)";
+	content: "(cover img is a placeholder while i scan my copy!)";
 	font-size: 16px;
 }
 
